// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loading renders with a different type 1`] = `
<Loading
  classes={
    Array [
      "background--primary",
    ]
  }
>
  <div
    className="soft soft-double-ends push-double-top one-whole text-center"
  >
    <div
      className="push-double-top"
    >
      <Spinner
        styles={
          Object {
            "borderColor": "#fff #6BAC43 #fff #fff",
            "borderWidth": "7px",
          }
        }
      />
      <h3
        className="text-light-primary push-top"
      >
        We're Removing Your Saved Account
      </h3>
      <p
        className="text-light-primary"
      >
        Please don't close this window while we remove your account details
      </p>
    </div>
  </div>
</Loading>
`;

exports[`Loading renders with default props 1`] = `
<Loading
  classes={
    Array [
      "background--primary",
    ]
  }
>
  <div
    className="soft soft-double-ends push-double-top one-whole text-center"
  >
    <div
      className="push-double-top"
    >
      <Spinner
        styles={
          Object {
            "borderColor": "#fff #6BAC43 #fff #fff",
            "borderWidth": "7px",
          }
        }
      />
      <h3
        className="text-light-primary push-top"
      >
        We're Updating Your Saved Account
      </h3>
      <p
        className="text-light-primary"
      >
        Please don't close this window while we update your account details
      </p>
    </div>
  </div>
</Loading>
`;
